--- a/src/metatrain/experimental/pet/default-hypers.yaml
+++ b/src/metatrain/experimental/pet/default-hypers.yaml
@@ -35,7 +35,7 @@ training:
   EPOCHS_WARMUP_ATOMIC: 250000000
   GLOBAL_AUG: True
   SLIDING_FACTOR: 0.7
-  ATOMIC_BATCH_SIZE: 850
+  ATOMIC_BATCH_SIZE: 50
   MAX_TIME: 234000
   ENERGY_WEIGHT: 0.1 # only used when fitting MLIP
   MULTI_GPU: False
@@ -50,3 +50,5 @@ training:
   USE_SHIFT_AGNOSTIC_LOSS: False # only used when fitting general target. Primary use case: EDOS
   ENERGIES_LOSS: per_structure # per_structure or per_atom
   BALANCED_DATA_LOADER: False
+  DISTRIBUTED: False
+  DISTRIBUTED_PORT: 39591
