--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ alchemical-model = [
   "torch_alchemical @ git+https://github.com/abmazitov/torch_alchemical.git@51ff519",
 ]
 pet = [
-  "pet @ git+https://github.com/spozdn/pet.git@9f6119d",
+  "pet @ git+https://github.com/lab-cosmo/pet.git@0ed87cc",
 ]
 gap = [
     "rascaline-torch @ git+https://github.com/luthaf/rascaline@5348132#subdirectory=python/rascaline-torch",
