--- a/tests/resources/options.yaml
+++ b/tests/resources/options.yaml
@@ -1,8 +1,7 @@
 architecture:
-  name: experimental.soap_bpnn
+  name: experimental.pet
   training:
-    batch_size: 2
-    num_epochs: 1
+    EPOCH_NUM_ATOMIC: 10000
 
 training_set:
   systems:
