--- a/src/metatrain/experimental/pet/default-hypers.yaml
+++ b/src/metatrain/experimental/pet/default-hypers.yaml
@@ -35,6 +35,8 @@ model:
   USE_ZBL: False
 
 training:
+  DISTRIBUTED: False
+  DISTRIBUTED_PORT: 39592
   INITIAL_LR: 1e-4
   EPOCH_NUM: 1000
   EPOCHS_WARMUP: 50
@@ -49,6 +51,8 @@ training:
   RANDOM_SEED: 0
   CUDA_DETERMINISTIC: False
   MODEL_TO_START_WITH: null
+  ALL_SPECIES_PATH: null
+  SELF_CONTRIBUTIONS_PATH: null
   SUPPORT_MISSING_VALUES: False
   USE_WEIGHT_DECAY: False
   WEIGHT_DECAY: 0.0
